# AIDays-Masterclass

./: CharGPT.ipynb  CharGPT.py  finetune_char_data.txt  genIPMData.py  iambic_eval_data.txt  iambic_poem.txt  pyproject.toml  train_char_data.txt
notebooks/: 1_llm_structure.ipynb  2_lora_finetuning.ipynb  2_lora_finetuning_cleaned.ipynb
notebooks/checkpoint-epoch-1/: adapter_config.json
notebooks/results/checkpoint-500/: rng_state.pth  scheduler.pt  trainer_state.json
notebooks/results/checkpoint-800/: rng_state.pth  scheduler.pt  trainer_state.json
notebooks/results/checkpoint-843/: rng_state.pth  scheduler.pt  trainer_state.json
