[project]
name = "aidays-masterclass"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "accelerate>=1.6.0",
    "bitsandbytes>=0.45.5",
    "datasets>=3.5.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.9.4",
    "nltk>=3.9.1",
    "numpy>=2.0.2",
    "peft>=0.15.1",
    "pyzmq>=26.4.0",
    "requests>=2.32.3",
    "seaborn>=0.13.2",
    "torch>=2.6.0",
    "transformers[torch]>=4.51.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "uv>=0.6.14",
]
